--- a/#project/Dockerfile
+++ b/#project/Dockerfile
@@ -1,6 +1,7 @@
 # Use the official Python image as the base image
-FROM python:3.8
+FROM python:3.11.1
 
+RUN pip install --no-cache-dir pip==23.1.2
 # Set the working directory in the container
 WORKDIR /COES
 
@@ -9,6 +10,7 @@ COPY . /COES
 
 # Install the application dependencies
 RUN pip install -r requirements.txt
-
+#port 
+EXPOSE 8454
 # Define the entry point for the container
-CMD ["flask", "run", "--host=8.8.8.8"]
+CMD ["flask", "--app", "main.py", "--debug", "run"]
